objects/MWA1_Entry__c.object
<CustomObject>
    <description>Each record is an individual line item on a survey, which may include (i) divider text, (ii) a rating scale, or (iii) a question.</description>
    <label>Entry</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>NOV__c</fullName>
        <formula>If(len( trim(Value_1__c ))&gt;0,1,0) + If(len( trim(Value_2__c ))&gt;0,1,0) + If(len( trim(Value_3__c ))&gt;0,1,0) + If(len( trim(Value_4__c ))&gt;0,1,0) + If(len( trim(Value_5__c ))&gt;0,1,0) + If(len( trim(Value_6__c ))&gt;0,1,0) + If(len( trim(Value_7__c ))&gt;0,1,0) + If(len( trim(Value_8__c ))&gt;0,1,0) + If(len( trim(Value_9__c ))&gt;0,1,0) + If(len( trim(Value_10__c ))&gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Values</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EType__c</fullName>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DIVIDER TEXT</fullName>
                </value>
                <value>
                    <fullName>RATING SCALE LABELS</fullName>
                </value>
                <value>
                    <fullName>VERTICAL SPACER</fullName>
                </value>
                <value>
                    <fullName>Single-select (Vertical)</fullName>
                </value>
                <value>
                    <fullName>Single-select (Horizontal)</fullName>
                </value>
                <value>
                    <fullName>Multi-select (Vertical)</fullName>
                </value>
                <value>
                    <fullName>Multi-select (Horizontal)</fullName>
                </value>
                <value>
                    <fullName>Number (ranged)</fullName>
                </value>
                <value>
                    <fullName>Number (unranged)</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Short Answer (255)</fullName>
                </value>
                <value>
                    <fullName>Long Answer (32000)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCode__c</fullName>
        <formula>IF( ISPICKVAL( EType__c , &quot;Single-select (Vertical)&quot;) , 1,IF( ISPICKVAL( EType__c , &quot;Single-select (Horizontal)&quot;) , 2, IF( ISPICKVAL( EType__c , &quot;Multi-select (Vertical)&quot;) , 3, IF( ISPICKVAL( EType__c , &quot;Multi-select (Horizontal)&quot;),  4, IF( ISPICKVAL( EType__c , &quot;Number (ranged)&quot;) , 5, IF( ISPICKVAL( EType__c , &quot;Number (unranged)&quot;) , 6, IF( ISPICKVAL( EType__c , &quot;Date&quot;) , 7, IF( ISPICKVAL( EType__c , &quot;Short Answer (255)&quot;) , 8, IF( ISPICKVAL( EType__c , &quot;Long Answer (32000)&quot;) , 9, IF( ISPICKVAL( EType__c , &quot;RATING SCALE LABELS&quot;),10,IF( ISPICKVAL( EType__c , &quot;DIVIDER TEXT&quot;) , 11,IF( ISPICKVAL( EType__c , &quot;VERTICAL SPACER&quot;) , 12,0))))))))))))</formula>
        <label>Type Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <description>orig: if( {!TCode__c} =3,if(or(len(text( {!Lower_Limit__c} ))=0, len(text( {!Upper_Limit__c}))=0),&quot;Range Error&quot;,&quot;Ok&quot;),if(  CONTAINS(&quot;567&quot;, Text({!TCode__c})), if({!NOV__c} =0,&quot;Value Error&quot;,&quot;Ok&quot;),&quot;N/A&quot;))</description>
        <formula>CASE( TCode__c ,5,if(  or(ISNULL( Lower_Limit__c) , ISNULL( Upper_Limit__c ), Lower_Limit__c &gt; Upper_Limit__c ),&quot;Range Err&quot;,&quot;OK&quot;), 12,if( ISNULL( Vertical_pixels__c ),&quot;VS Error&quot;,&quot;OK&quot;), 1,&quot;unk&quot;,2,&quot;unk&quot;,3,&quot;unk&quot;,4,&quot;unk&quot;,&quot;N/A&quot;)</formula>
        <label>Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_1__c</fullName>
        <label>Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_2__c</fullName>
        <label>Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_10__c</fullName>
        <label>Value 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alignment__c</fullName>
        <label>Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MWASurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>MWA1_Survey__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>R00N30000002T6llEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entry_Text__c</fullName>
        <label>Entry Text</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lower_Limit__c</fullName>
        <label>Lower Limit</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upper_Limit__c</fullName>
        <label>Upper Limit</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Correct_Value__c</fullName>
        <label>Correct Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_Image__c</fullName>
        <label>Image File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Supress_Scale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rows_to_Display__c</fullName>
        <label>Rows to Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical_pixels__c</fullName>
        <label>Vertical Spacer Height (pixels)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>